# Pelengator

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-release.yml  publish-doxygen.yml  static-analysis.yml
Core/: CMakeLists.txt
Core/Inc/: CommonSettings.h  Filter.hpp  Peleng.hpp  main.h
Core/Inc/dsp/: PelengDsp.hpp
Core/Inc/platform/: UartTelemetry.hpp
Core/Src/: Filter.cpp  Peleng.cpp  cordic.c  main.cpp
Core/Src/dsp/: PelengDsp.cpp
docs/: Doxyfile.in  mainpage.md
docs/cmsis_style/: footer.js  header.html
renode/: Peleng.resc  adc_cluster_g4.py  adc_runtime.py  prepare_adc_data.py  run_renode_debug.sh  stm32g4.repl
src/: CMakeLists.txt  main.cpp
src/peleng/: CommonSettings.h  DelayEstimator.cpp  DelayEstimator.hpp  Filter.cpp  Filter.hpp  FilterCoefficients.hpp  Peleng.cpp  Peleng.hpp  UartTelemetry.cpp  UartTelemetry.hpp
st_gen/: .mxproject  Peleng.ioc
st_gen/toolchein/: gcc-arm-none-eabi.cmake
tests/: CMakeLists.txt  delay_estimator_tests.cpp  filter_tests.cpp  host_tests.cpp
tests/renode/: README.md  peleng_system_test.resc  rcc_g4.py  run_renode_system.sh  stm32g4.repl
tests/renode/data/: adc1_ch13.txt  adc2_ch18.txt  adc3_ch13.txt  adc5_ch3.txt
